--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
     },
     "dependencies": {
         "react": "^18.3.1",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "react-dom": "^18.3.1"
     },
     "packageManager": "pnpm@9.9.0"
 }
