--- a/web/package.json
+++ b/web/package.json
@@ -8,5 +8,8 @@
         "lodash": "^4.17.21",
         "react-dom": "^18.3.1"
     },
+    "devDependencies": {
+        "typescript": "^5.4.5"
+    },
     "packageManager": "pnpm@9.9.0"
 }
