use package_json_file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
-          version: 9
+          package_json_file: web/package.json
 
       - name: Setup Node
         uses: actions/setup-node@v4
