--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "react": "^18.3.1",
         "lodash": "^4.17.21",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "next": "^14.2.5"
     },
     "devDependencies": {
         "typescript": "^5.4.5"
